k8s/confirm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: confirm-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: confirm
  template:
    metadata:
      labels:
        app: confirm
    spec:
      containers:
        - name: confirm
          image: micro-confirm:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 5004
