k8s/driver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: driver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: driver
  template:
    metadata:
      labels:
        app: driver
    spec:
      containers:
        - name: driver
          image: micro-driver:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 5001
