k8s/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin
spec:
  selector:
    app: admin
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: NodePort
