k8s/booking-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking
spec:
  selector:
    app: booking
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
  type: NodePort
