k8s/confirm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: confirm
spec:
  selector:
    app: confirm
  ports:
    - protocol: TCP
      port: 5004
      targetPort: 5004
  type: NodePort
