k8s/driver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: driver
spec:
  selector:
    app: driver
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
