k8s/menu-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: menu
spec:
  selector:
    app: menu
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
  type: ClusterIP
