k8s/networking-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-menu-to-driver
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: driver
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: NotIn
                values:
                  - menu
